SAM-2244: Grading and Feedback needs to be condensed (Convert some radio buttons into select boxes per spec)
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@308066 66ffb92e-73f9-0310-93c1-f5514f145a0a